--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -4,6 +4,7 @@
     display: flex
     justify-content: space-between
     align-items: center
+    margin-top: 20px
   &__info
     display: flex
     align-items: center
@@ -11,15 +12,22 @@
   &__contacts
     display: flex
     flex-direction: column
+  &__address
+    color: $text-color
+    font-size: 13px
+    font-weight: 400
   &__button
     margin-left: 30px
+    color: $text-color
+    font-size: 13px
+    font-weight: 600
   &__phone
     display: inline-block
     color: $text-color
     font-size: 20px
     font-weight: 400
     text-decoration: none
-    margin-top: 10px
+    margin-top: 9px
 @media (max-width: 768px)
   .navbar
     &__contacts
