--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -11,10 +11,19 @@ img
 @media (max-width: 768px)
   .container
     max-width: 580px
+    width: 90%
+@media (max-width: 567px)
+  .container
+    max-width: 487px
     width: 95%
-// @media (max-width: 480px)
-//   .container
-//     width: 960px
+  .button
+    border-radius: 5px
+@media (max-width: 320px)
+  .container
+    max-width: 277px
+    width: 95%
+  .button
+    border-radius: 5px
 .button
   border-radius: 10px
   background-color: $main-color
