--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -4,7 +4,7 @@
     display: flex
     justify-content: space-between
     align-items: center
-    margin-top: 20px
+    margin-top: 19px
   &__info
     display: flex
     align-items: center
@@ -37,3 +37,10 @@
       padding: 12px 26px
     &__logo
       width: 90px
+// @media (max-width: 567px)
+
+@media (max-width: 320px)
+  .navbar
+    padding: 0 
+    &-block
+      margin-top: 16px
