--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,10 +37,10 @@ img {
 @media (max-width: 320px) {
   .container {
     max-width: 277px;
-    width: 95%;
+    width: 85%;
   }
   .button {
-    border-radius: 5px;
+    border-radius: 5px !important;
   }
 }
 
@@ -65,7 +65,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 19px;
 }
 
 .navbar__info {
@@ -255,6 +254,36 @@ img {
   }
   .hero-list__image {
     margin-right: 15px;
+  }
+}
+
+@media (max-width: 320px) {
+  .hero {
+    padding: 40px 0;
+  }
+  .hero-text__title {
+    font-size: 24px;
+    line-height: 1.3;
+    font-weight: 500;
+    margin-bottom: 4px;
+  }
+  .hero-text__subtitle {
+    font-size: 16px;
+    line-height: 1.3;
+    font-weight: 500;
+    margin-bottom: 25px;
+  }
+  .hero-list__text {
+    max-width: 210px;
+    font-size: 12px;
+  }
+  .hero-list__item {
+    margin-bottom: 22px;
+  }
+  .hero-list__image {
+    margin-right: 15px;
+    width: 35px;
+    height: 35px;
   }
 }
 /*# sourceMappingURL=style.css.map */
