--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -21,9 +21,9 @@ img
 @media (max-width: 320px)
   .container
     max-width: 277px
-    width: 95%
+    width: 85%
   .button
-    border-radius: 5px
+    border-radius: 5px !important
 .button
   border-radius: 10px
   background-color: $main-color
