--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -71,3 +71,27 @@
         margin-bottom: 22px
       &__image
         margin-right: 15px
+@media (max-width: 320px)
+  .hero
+    padding: 40px 0
+    &-text
+      &__title
+        font-size: 24px
+        line-height: 1.3
+        font-weight: 500
+        margin-bottom: 4px
+      &__subtitle
+        font-size: 16px
+        line-height: 1.3
+        font-weight: 500
+        margin-bottom: 25px
+    &-list
+      &__text
+        max-width: 210px
+        font-size: 12px
+      &__item
+        margin-bottom: 22px
+      &__image
+        margin-right: 15px
+        width: 35px
+        height: 35px
