--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,22 @@
+@font-face {
+  font-family: 'Museo Sans Light';
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-300.eot");
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-300.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-300.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Museo Sans Bold';
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.eot");
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: 'Museo Sans Light', sans-serif;
+  font-weight: 300;
 }
 
 img {
@@ -7,7 +24,7 @@ img {
 }
 
 .container {
-  width: 1171px;
+  width: 1170px;
   margin: auto;
 }
 
@@ -90,23 +107,22 @@ img {
 .navbar__address {
   color: #333333;
   font-size: 13px;
-  font-weight: 400;
 }
 
 .navbar__button {
   margin-left: 30px;
   color: #333333;
   font-size: 13px;
-  font-weight: 600;
 }
 
 .navbar__phone {
   display: inline-block;
   color: #333333;
   font-size: 20px;
-  font-weight: 400;
   text-decoration: none;
   margin-top: 9px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
 }
 
 @media (max-width: 768px) {
@@ -135,6 +151,10 @@ img {
   padding: 50px 0;
 }
 
+.hero-image {
+  width: 630px;
+}
+
 .hero-block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -147,22 +167,24 @@ img {
 .hero-text {
   -ms-flex-preferred-size: 45%;
       flex-basis: 45%;
-  padding-right: 35px;
+  padding-right: 60px;
 }
 
 .hero-text__title {
   font-size: 41px;
-  font-weight: 600;
   line-height: 55px;
   margin-bottom: 18px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
 }
 
 .hero-text__subtitle {
   display: inline-block;
   font-size: 20px;
-  font-weight: 500;
   line-height: 65px;
-  margin-bottom: 45px;
+  margin-bottom: 47px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
 }
 
 .hero-list {
@@ -198,7 +220,9 @@ img {
 }
 
 .hero-list__text {
-  max-width: 300px;
+  max-width: 235px;
+  font-size: 14px;
+  line-height: 24px;
 }
 
 @media (max-width: 1200px) {
@@ -223,13 +247,11 @@ img {
   .hero-text__title {
     font-size: 24px;
     line-height: 1.4;
-    font-weight: 400;
     margin-bottom: 13px;
   }
   .hero-text__subtitle {
     font-size: 16px;
     line-height: 1.4;
-    font-weight: 400;
     margin-bottom: 28px;
   }
   .hero-list__text {
@@ -251,13 +273,11 @@ img {
   .hero-text__title {
     font-size: 24px;
     line-height: 1.3;
-    font-weight: 500;
     margin-bottom: 4px;
   }
   .hero-text__subtitle {
     font-size: 16px;
     line-height: 1.3;
-    font-weight: 500;
     margin-bottom: 25px;
   }
   .hero-list__text {
