--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,22 +1,24 @@
 .hero
   padding: 50px 0
+  &-image
+    width: 630px
   &-block
     display: flex
     justify-content: space-between
   &-text
     flex-basis: 45%
-    padding-right: 35px
+    padding-right: 60px
     &__title
       font-size: 41px
-      font-weight: 600
       line-height: 55px
       margin-bottom: 18px
+      +bold
     &__subtitle
       display: inline-block
       font-size: 20px
-      font-weight: 500
       line-height: 65px
-      margin-bottom: 45px
+      margin-bottom: 47px
+      +bold
   &-list
     margin: 0
     padding: 0
@@ -34,7 +36,9 @@
       justify-content: center
       margin-right: 30px
     &__text
-      max-width: 300px
+      max-width: 235px
+      font-size: 14px
+      line-height: 24px
 
 @media (max-width: 1200px)
   .hero
@@ -51,12 +55,10 @@
       &__title
         font-size: 24px
         line-height: 1.4
-        font-weight: 400
         margin-bottom: 13px
       &__subtitle
         font-size: 16px
         line-height: 1.4
-        font-weight: 400
         margin-bottom: 28px
     &-list
       &__text
@@ -73,12 +75,10 @@
       &__title
         font-size: 24px
         line-height: 1.3
-        font-weight: 500
         margin-bottom: 4px
       &__subtitle
         font-size: 16px
         line-height: 1.3
-        font-weight: 500
         margin-bottom: 25px
     &-list
       &__text
