--- a/src/css/style.css
+++ b/src/css/style.css
@@ -113,6 +113,8 @@ img {
   margin-left: 30px;
   color: #333333;
   font-size: 13px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
 }
 
 .navbar__phone {
@@ -220,7 +222,7 @@ img {
 }
 
 .hero-list__text {
-  max-width: 235px;
+  max-width: 240px;
   font-size: 14px;
   line-height: 24px;
 }
