--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -19,6 +19,7 @@
     margin-left: 30px
     color: $text-color
     font-size: 13px
+    +bold
   &__phone
     display: inline-block
     color: $text-color
