--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,13 +1,20 @@
 .hero
-  padding: 50px 0
+  padding: 38px 0
+  background-color: $secondary
   &-image
-    width: 630px
+    display: flex
+    justify-content: flex-end
+    align-items: center
+    &__pic
+      // padding-left: 30px
+      position: relative
+      left: 4%
   &-block
     display: flex
     justify-content: space-between
   &-text
-    flex-basis: 45%
-    padding-right: 60px
+    flex-basis: 50%
+    padding-right: 80px
     &__title
       font-size: 41px
       line-height: 55px
@@ -26,6 +33,8 @@
       display: flex
       align-items: center
       margin-bottom: 25px
+      &:last-child
+        margin-bottom: 0
     &__image
       width: 40px
       height: 40px
