--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,7 @@
 body {
   font-family: 'Museo Sans Light', sans-serif;
   font-weight: 300;
+  letter-spacing: 0px;
 }
 
 img {
@@ -31,6 +32,22 @@ img {
 .container {
   width: 1170px;
   margin: auto;
+}
+
+.section {
+  padding: 60px 0;
+}
+
+.section-title {
+  font-size: 23px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0px;
+}
+
+.section-subtitle {
+  display: block;
+  font-size: 16px;
 }
 
 @media (max-width: 1200px) {
@@ -58,11 +75,24 @@ img {
 
 @media (max-width: 320px) {
   .container {
-    max-width: 277px;
-    width: 85%;
+    max-width: 280px;
+    width: 93%;
   }
   .button {
     border-radius: 5px !important;
+    padding: 19px 62px;
+  }
+  .section {
+    padding: 49px 0;
+  }
+  .section-title {
+    font-size: 18px;
+    font-family: 'Museo Sans Bold', sans-serif;
+    font-weight: 700;
+    letter-spacing: 0px;
+  }
+  .section-subtitle {
+    font-size: 14px;
   }
 }
 
@@ -76,21 +106,6 @@ img {
 .button:hover {
   background-color: #ffdb33;
   cursor: pointer;
-}
-
-.section {
-  padding: 60px 0;
-}
-
-.section-title {
-  font-size: 24px;
-  font-family: 'Museo Sans Bold', sans-serif;
-  font-weight: 700;
-}
-
-.section-subtitle {
-  display: block;
-  font-size: 16px;
 }
 
 .input {
@@ -120,9 +135,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   text-align: right;
 }
 
@@ -142,21 +154,23 @@ img {
 }
 
 .navbar__button {
-  margin-left: 30px;
+  margin-left: 27px;
   color: #333333;
   font-size: 13px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
+  letter-spacing: 0px;
 }
 
 .navbar__phone {
-  display: inline-block;
+  display: block;
   color: #333333;
   font-size: 20px;
   text-decoration: none;
-  margin-top: 9px;
+  margin-top: 6px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
+  letter-spacing: 0px;
 }
 
 @media (max-width: 768px) {
@@ -177,12 +191,12 @@ img {
     padding: 0;
   }
   .navbar-block {
-    margin-top: 16px;
+    margin-top: 14px;
   }
 }
 
 .hero {
-  padding: 38px 0;
+  padding: 47px 0;
   background-color: #f5f5f5;
 }
 
@@ -196,11 +210,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.hero-image__pic {
-  position: relative;
-  left: 4%;
 }
 
 .hero-block {
@@ -220,10 +229,11 @@ img {
 
 .hero-text__title {
   font-size: 41px;
-  line-height: 55px;
-  margin-bottom: 18px;
+  line-height: 54px;
+  margin-bottom: 17px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
+  letter-spacing: 0px;
 }
 
 .hero-text__subtitle {
@@ -233,6 +243,7 @@ img {
   margin-bottom: 47px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
+  letter-spacing: 0px;
 }
 
 .hero-list {
@@ -320,29 +331,33 @@ img {
 
 @media (max-width: 320px) {
   .hero {
-    padding: 40px 0;
+    padding: 42px 14px;
+  }
+  .hero-text {
+    padding-right: 0;
   }
   .hero-text__title {
-    font-size: 24px;
+    font-size: 23px;
     line-height: 1.3;
-    margin-bottom: 4px;
+    margin-bottom: 6px;
   }
   .hero-text__subtitle {
     font-size: 16px;
-    line-height: 1.3;
-    margin-bottom: 25px;
+    line-height: 1.2;
+    margin-bottom: 28px;
   }
   .hero-list__text {
     max-width: 210px;
     font-size: 12px;
+    line-height: 14px;
   }
   .hero-list__item {
-    margin-bottom: 22px;
+    margin-bottom: 19px;
   }
   .hero-list__image {
-    margin-right: 15px;
-    width: 35px;
-    height: 35px;
+    margin-right: 14px;
+    width: 40px;
+    height: 40px;
   }
 }
 
@@ -364,14 +379,14 @@ img {
 }
 
 .offer-block {
-  width: 49%;
+  width: 50%;
   padding-right: 80px;
   position: relative;
 }
 
 .offer__title {
   max-width: 360px;
-  line-height: 35px;
+  line-height: 37px;
   margin-bottom: 20px;
 }
 
@@ -381,13 +396,13 @@ img {
 }
 
 .offer__input {
-  margin-bottom: 25px;
+  margin-bottom: 27px;
   width: 238px;
   min-height: 65px;
 }
 
 .offer__input:first-child {
-  margin-right: 10px;
+  margin-right: 12px;
 }
 
 .offer__input:focus {
@@ -395,11 +410,12 @@ img {
 }
 
 .offer__button {
-  width: 100%;
+  width: 98%;
   min-height: 70px;
   margin-bottom: 25px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
+  letter-spacing: 0px;
 }
 
 .offer-text {
@@ -436,6 +452,7 @@ img {
   text-decoration: none;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
+  letter-spacing: 0px;
 }
 
 @media (max-width: 1200px) {
@@ -449,7 +466,7 @@ img {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 320px) {
   .offer {
     background: #ffffff;
   }
@@ -459,11 +476,28 @@ img {
   }
   .offer__input {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 9px;
     font-size: 15px;
   }
   .offer__button {
     font-size: 14px;
+    margin-bottom: 23px;
+  }
+  .offer__title {
+    line-height: 20px;
+  }
+  .offer__subtitle {
+    margin-bottom: 28px;
+  }
+  .offer-text {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 15px;
+  }
+  .offer-text__callback {
+    margin-bottom: 6px;
   }
 }
 /*# sourceMappingURL=style.css.map */
