--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -20,9 +20,11 @@
 @mixin reg {
   font-family: 'Museo Sans Light', sans-serif;
   font-weight: 300;
+  letter-spacing: 0px;
 }
 
 @mixin bold {
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
+  letter-spacing: 0px;
 }
