--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,14 +1,10 @@
 .hero
-  padding: 38px 0
+  padding: 47px 0
   background-color: $secondary
   &-image
     display: flex
     justify-content: flex-end
     align-items: center
-    &__pic
-      // padding-left: 30px
-      position: relative
-      left: 4%
   &-block
     display: flex
     justify-content: space-between
@@ -17,8 +13,8 @@
     padding-right: 80px
     &__title
       font-size: 41px
-      line-height: 55px
-      margin-bottom: 18px
+      line-height: 54px
+      margin-bottom: 17px
       +bold
     &__subtitle
       display: inline-block
@@ -79,23 +75,25 @@
         margin-right: 15px
 @media (max-width: 320px)
   .hero
-    padding: 40px 0
+    padding: 42px 14px
     &-text
+      padding-right: 0
       &__title
-        font-size: 24px
+        font-size: 23px
         line-height: 1.3
-        margin-bottom: 4px
+        margin-bottom: 6px
       &__subtitle
         font-size: 16px
-        line-height: 1.3
-        margin-bottom: 25px
+        line-height: 1.2
+        margin-bottom: 28px
     &-list
       &__text
         max-width: 210px
         font-size: 12px
+        line-height: 14px
       &__item
-        margin-bottom: 22px
+        margin-bottom: 19px
       &__image
-        margin-right: 15px
-        width: 35px
-        height: 35px
+        margin-right: 14px
+        width: 40px
+        height: 40px
