--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -12,28 +12,26 @@
     left: 0
     background-color: #ffffff
   &-block
-    width: 49%
+    width: 50%
     padding-right: 80px
     position: relative
   &__title
     max-width: 360px
-    line-height: 35px
+    line-height: 37px
     margin-bottom: 20px
-    // letter-spacing: 0.1px
-    // margin-top: 84px
   &__subtitle
     max-width: 250px
     margin-bottom: 30px
   &__input
-    margin-bottom: 25px
+    margin-bottom: 27px
     width: 238px
     min-height: 65px
     &:first-child
-      margin-right: 10px
+      margin-right: 12px
     &:focus
         border: 1px solid $border-input-focus
   &__button
-    width: 100%
+    width: 98%
     min-height: 70px
     margin-bottom: 25px
     +bold
@@ -69,7 +67,7 @@
       margin-bottom: 10px
     &__button
       font-size: 14px  
-@media (max-width: 768px)
+@media (max-width: 320px)
   .offer
     background: #ffffff
     &-block
@@ -77,7 +75,18 @@
       padding-right: 0
     &__input
       width: 100%
-      margin-bottom: 10px
+      margin-bottom: 9px
       font-size: 15px
     &__button
-      font-size: 14px  
+      font-size: 14px
+      margin-bottom: 23px
+    &__title
+      line-height: 20px
+    &__subtitle
+      margin-bottom: 28px
+    &-text
+      flex-direction: column
+      font-size: 15px
+      &__callback
+        margin-bottom: 6px  
+
