--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,6 +36,7 @@ img {
 
 .section {
   padding: 60px 0;
+  height: 596px;
 }
 
 .section-title {
@@ -481,7 +482,7 @@ img {
   }
   .offer__button {
     font-size: 14px;
-    margin-bottom: 23px;
+    margin-bottom: 22px;
   }
   .offer__title {
     line-height: 20px;
@@ -499,5 +500,83 @@ img {
   .offer-text__callback {
     margin-bottom: 6px;
   }
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.modal_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-dialog {
+  position: relative;
+  margin: auto;
+  max-width: 571px;
+  width: 65%;
+  min-height: 691px;
+  background-color: #ffffff;
+  padding: 100px 78px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal-dialog__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.modal-dialog__title {
+  text-align: center;
+  font-size: 22px;
+  line-height: 33px;
+  margin-bottom: 52px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0px;
+}
+
+.modal-dialog__subtitle {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 35px;
+  margin-bottom: 53px;
+}
+
+.modal-dialog__subtitle2 {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 20px;
+  margin-bottom: 13px;
+  text-align: center;
+}
+
+.form__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.form__button {
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: 33px;
 }
 /*# sourceMappingURL=style.css.map */
