--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,14 +77,14 @@ img {
 @media (max-width: 320px) {
   .container {
     max-width: 280px;
-    width: 93%;
+    width: 95%;
   }
   .button {
     border-radius: 5px !important;
-    padding: 19px 62px;
+    padding: 19px 60px;
   }
   .section {
-    padding: 49px 0;
+    padding: 50px 0;
   }
   .section-title {
     font-size: 18px;
@@ -94,6 +94,9 @@ img {
   }
   .section-subtitle {
     font-size: 14px;
+  }
+  .navbar-block {
+    height: 76px;
   }
 }
 
@@ -114,6 +117,12 @@ img {
   padding: 20px 26px;
   font-size: 15px;
   border-radius: 10px;
+}
+
+.input:focus {
+  outline: none !important;
+  border-radius: 10px;
+  border: 1px solid #FF9653;
 }
 
 .navbar {
@@ -156,6 +165,7 @@ img {
 
 .navbar__button {
   margin-left: 27px;
+  margin-top: -5px;
   color: #333333;
   font-size: 13px;
   font-family: 'Museo Sans Bold', sans-serif;
@@ -181,6 +191,7 @@ img {
   .navbar__button {
     font-size: 10px;
     padding: 12px 26px;
+    margin-right: 4px;
   }
   .navbar__logo {
     width: 90px;
@@ -191,8 +202,9 @@ img {
   .navbar {
     padding: 0;
   }
-  .navbar-block {
-    margin-top: 14px;
+  .navbar__button {
+    padding: 14px 26px;
+    margin-top: -5px;
   }
 }
 
@@ -241,7 +253,7 @@ img {
   display: inline-block;
   font-size: 20px;
   line-height: 65px;
-  margin-bottom: 47px;
+  margin-bottom: 49px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
   letter-spacing: 0px;
@@ -332,7 +344,7 @@ img {
 
 @media (max-width: 320px) {
   .hero {
-    padding: 42px 14px;
+    padding: 27px 15px;
   }
   .hero-text {
     padding-right: 0;
@@ -341,11 +353,13 @@ img {
     font-size: 23px;
     line-height: 1.3;
     margin-bottom: 6px;
+    letter-spacing: 0.6px;
   }
   .hero-text__subtitle {
     font-size: 16px;
     line-height: 1.2;
     margin-bottom: 28px;
+    letter-spacing: 0.3px;
   }
   .hero-list__text {
     max-width: 210px;
@@ -353,7 +367,7 @@ img {
     line-height: 14px;
   }
   .hero-list__item {
-    margin-bottom: 19px;
+    margin-bottom: 20px;
   }
   .hero-list__image {
     margin-right: 14px;
@@ -387,8 +401,10 @@ img {
 
 .offer__title {
   max-width: 360px;
-  line-height: 37px;
+  line-height: 35px;
   margin-bottom: 20px;
+  margin-top: 23px;
+  letter-spacing: 0.6px;
 }
 
 .offer__subtitle {
@@ -397,7 +413,7 @@ img {
 }
 
 .offer__input {
-  margin-bottom: 27px;
+  margin-bottom: 29px;
   width: 238px;
   min-height: 65px;
 }
@@ -406,14 +422,10 @@ img {
   margin-right: 12px;
 }
 
-.offer__input:focus {
-  border: 1px solid orange;
-}
-
 .offer__button {
   width: 98%;
   min-height: 70px;
-  margin-bottom: 25px;
+  margin-bottom: 26px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
   letter-spacing: 0px;
@@ -426,7 +438,7 @@ img {
 }
 
 .offer-text__callback {
-  width: 290px;
+  width: 296px;
   padding-right: 65px;
   font-size: 15px;
   font-weight: 400;
@@ -451,6 +463,7 @@ img {
   color: #333333;
   font-size: 15px;
   text-decoration: none;
+  margin-top: 1px;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
   letter-spacing: 0px;
@@ -479,13 +492,17 @@ img {
     width: 100%;
     margin-bottom: 9px;
     font-size: 15px;
+    padding-left: 21px;
   }
   .offer__button {
     font-size: 14px;
     margin-bottom: 22px;
+    padding: 0px 36px;
   }
   .offer__title {
-    line-height: 20px;
+    max-width: 274px;
+    line-height: 21px;
+    letter-spacing: 0;
   }
   .offer__subtitle {
     margin-bottom: 28px;
@@ -498,7 +515,14 @@ img {
     font-size: 15px;
   }
   .offer-text__callback {
-    margin-bottom: 6px;
+    margin-bottom: 5px;
+    padding-left: 5px;
+  }
+  .offer-contactus__callus {
+    padding-left: 5px;
+  }
+  .offer-contactus__phone {
+    padding-left: 5px;
   }
 }
 
