--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -2,4 +2,4 @@ $main-color: #ffd200
 $text-color: #333333
 $secondary: #f5f5f5
 $border-input: #dddddd
-$border-input-focus: orange
+$border-input-focus: #FF9653
