--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -20,7 +20,7 @@
       display: inline-block
       font-size: 20px
       line-height: 65px
-      margin-bottom: 47px
+      margin-bottom: 49px
       +bold
   &-list
     margin: 0
@@ -75,24 +75,26 @@
         margin-right: 15px
 @media (max-width: 320px)
   .hero
-    padding: 42px 14px
+    padding: 27px 15px
     &-text
       padding-right: 0
       &__title
         font-size: 23px
         line-height: 1.3
         margin-bottom: 6px
+        letter-spacing: 0.6px
       &__subtitle
         font-size: 16px
         line-height: 1.2
         margin-bottom: 28px
+        letter-spacing: 0.3px
     &-list
       &__text
         max-width: 210px
         font-size: 12px
         line-height: 14px
       &__item
-        margin-bottom: 19px
+        margin-bottom: 20px
       &__image
         margin-right: 14px
         width: 40px
