--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -6,8 +6,6 @@
     align-items: center
   &__info
     display: flex
-    // align-items: center
-    // justify-content: flex-end
     text-align: right
   &__contacts
     display: flex
@@ -17,6 +15,7 @@
     font-size: 13px
   &__button
     margin-left: 27px
+    margin-top: -5px
     color: $text-color
     font-size: 13px
     +bold
@@ -34,13 +33,13 @@
     &__button
       font-size: 10px
       padding: 12px 26px
+      margin-right: 4px
     &__logo
       width: 90px
 
 @media (max-width: 320px)
   .navbar
     padding: 0 
-    &-block
-      margin-top: 14px
     &__button
-    // margin-left: 40px
+      padding: 14px 26px
+      margin-top: -5px
