--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -17,29 +17,29 @@
     position: relative
   &__title
     max-width: 360px
-    line-height: 37px
+    line-height: 35px
     margin-bottom: 20px
+    margin-top: 23px
+    letter-spacing: 0.6px 
   &__subtitle
     max-width: 250px
     margin-bottom: 30px
   &__input
-    margin-bottom: 27px
+    margin-bottom: 29px
     width: 238px
     min-height: 65px
     &:first-child
       margin-right: 12px
-    &:focus
-        border: 1px solid $border-input-focus
   &__button
     width: 98%
     min-height: 70px
-    margin-bottom: 25px
+    margin-bottom: 26px
     +bold
   &-text
     display: flex
     &__callback
       // display: block
-      width: 290px
+      width: 296px
       padding-right: 65px
       font-size: 15px
       font-weight: 400
@@ -57,7 +57,7 @@
       color: $text-color
       font-size: 15px
       text-decoration: none
-      // margin-top: 9px
+      margin-top: 1px
       +bold
 @media (max-width: 1200px)
   background-size: cover
@@ -77,16 +77,26 @@
       width: 100%
       margin-bottom: 9px
       font-size: 15px
+      padding-left: 21px
     &__button
       font-size: 14px
       margin-bottom: 22px
+      padding: 0px 36px
     &__title
-      line-height: 20px
+      max-width: 274px
+      line-height: 21px
+      letter-spacing: 0
     &__subtitle
       margin-bottom: 28px
     &-text
       flex-direction: column
       font-size: 15px
       &__callback
-        margin-bottom: 6px  
+        margin-bottom: 5px
+        padding-left: 5px  
+    &-contactus
+      &__callus
+        padding-left: 5px
+      &__phone
+        padding-left: 5px
 
