--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,6 +112,10 @@ img {
   cursor: pointer;
 }
 
+.button:focus {
+  outline: none !important;
+}
+
 .input {
   border: 1px solid #dddddd;
   padding: 20px 26px;
@@ -123,6 +127,25 @@ img {
   outline: none !important;
   border-radius: 10px;
   border: 1px solid #FF9653;
+}
+
+.buttonup {
+  max-width: 70px;
+  display: none;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  position: fixed;
+  right: 20px;
+  bottom: 50px;
+  color: #000000;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.buttonup:hover {
+  cursor: pointer;
+  opacity: 1;
+  color: #ff0000;
 }
 
 .navbar {
