--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -55,6 +55,8 @@ img
   &:hover
     background-color: lighten($main-color, 10%)
     cursor: pointer
+  &:focus
+    outline: none !important
 
 .input
   border: 1px solid $border-input
@@ -62,6 +64,22 @@ img
   font-size: 15px
   border-radius: 10px
   &:focus
-    outline: none !important;
+    outline: none !important
     border-radius: 10px
     border: 1px solid $border-input-focus
+
+.buttonup
+  max-width: 70px
+  display: none
+  opacity: 0.5
+  filter: alpha(opacity=50)
+  position: fixed
+  right: 20px
+  bottom: 50px
+  color: #000000
+  transition: 0.3s
+  &:hover
+    cursor: pointer
+    opacity: 1
+    color: #ff0000
+    
