added portfolio section, slick slider effect

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -10,10 +10,11 @@ img
   margin: auto
 .section
   padding: 60px 0
-  height: 596px
+  // height: 596px
   &-title
     font-size: 23px
     +bold
+    text-align: center
   &-subtitle
     display: block
     font-size: 16px
@@ -38,7 +39,7 @@ img
     border-radius: 5px !important
     padding: 19px 60px
   .section
-    padding: 50px 0
+    padding: 42px 0
     &-title
       font-size: 18px
       +bold
@@ -82,4 +83,12 @@ img
     cursor: pointer
     opacity: 1
     color: #ff0000
-    
+@media (max-width: 320px)
+  .buttonup
+    display: none
+    max-width: 30px
+
+.arrows
+  &__left, &__right
+    &:hover
+      cursor: pointer
