--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -1,5 +1,5 @@
 .navbar
-  padding: 8px 0
+  padding: 6px 0
   &-block
     display: flex
     justify-content: space-between
@@ -7,6 +7,7 @@
   &__info
     display: flex
     text-align: right
+    padding-top: 2px
   &__contacts
     display: flex
     flex-direction: column
@@ -15,7 +16,7 @@
     font-size: 13px
   &__button
     margin-left: 27px
-    margin-top: -5px
+    margin-top: -4px
     color: $text-color
     font-size: 13px
     +bold
