--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,7 +36,6 @@ img {
 
 .section {
   padding: 60px 0;
-  height: 596px;
 }
 
 .section-title {
@@ -44,6 +43,7 @@ img {
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
   letter-spacing: 0px;
+  text-align: center;
 }
 
 .section-subtitle {
@@ -84,7 +84,7 @@ img {
     padding: 19px 60px;
   }
   .section {
-    padding: 50px 0;
+    padding: 42px 0;
   }
   .section-title {
     font-size: 18px;
@@ -148,8 +148,19 @@ img {
   color: #ff0000;
 }
 
+@media (max-width: 320px) {
+  .buttonup {
+    display: none;
+    max-width: 30px;
+  }
+}
+
+.arrows__left:hover, .arrows__right:hover {
+  cursor: pointer;
+}
+
 .navbar {
-  padding: 8px 0;
+  padding: 6px 0;
 }
 
 .navbar-block {
@@ -169,6 +180,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   text-align: right;
+  padding-top: 2px;
 }
 
 .navbar__contacts {
@@ -188,7 +200,7 @@ img {
 
 .navbar__button {
   margin-left: 27px;
-  margin-top: -5px;
+  margin-top: -4px;
   color: #333333;
   font-size: 13px;
   font-family: 'Museo Sans Bold', sans-serif;
@@ -232,7 +244,7 @@ img {
 }
 
 .hero {
-  padding: 47px 0;
+  padding: 52px 0;
   background-color: #f5f5f5;
 }
 
@@ -397,6 +409,9 @@ img {
     width: 40px;
     height: 40px;
   }
+  .hero-image__pic {
+    margin-bottom: 25px;
+  }
 }
 
 .offer {
@@ -420,14 +435,16 @@ img {
   width: 50%;
   padding-right: 80px;
   position: relative;
+  padding-bottom: 28px;
 }
 
 .offer__title {
   max-width: 360px;
   line-height: 35px;
   margin-bottom: 20px;
-  margin-top: 23px;
+  margin-top: 18px;
   letter-spacing: 0.6px;
+  text-align: left;
 }
 
 .offer__subtitle {
@@ -509,11 +526,12 @@ img {
   }
   .offer-block {
     width: 100%;
+    padding-bottom: 10px;
     padding-right: 0;
   }
   .offer__input {
     width: 100%;
-    margin-bottom: 9px;
+    margin-bottom: 8px;
     font-size: 15px;
     padding-left: 21px;
   }
@@ -526,6 +544,7 @@ img {
     max-width: 274px;
     line-height: 21px;
     letter-spacing: 0;
+    margin-top: 8px;
   }
   .offer__subtitle {
     margin-bottom: 28px;
@@ -625,5 +644,35 @@ img {
   width: 100%;
   margin-top: 15px;
   margin-bottom: 33px;
+}
+
+.portfolio {
+  background: #f5f5f5 url("../img/portfolio/portfolio-pattern.jpg") repeat-y center left;
+  background-size: 50%;
+}
+
+.portfolio__title {
+  max-width: 600px;
+  margin: auto;
+  margin-bottom: 100px;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 45px;
+}
+
+.portfolio__arrows {
+  max-width: 120px;
+  margin: auto;
+  margin-top: 68px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.slider__image {
+  margin: auto;
 }
 /*# sourceMappingURL=style.css.map */
