--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,5 +1,5 @@
 .hero
-  padding: 47px 0
+  padding: 52px 0
   background-color: $secondary
   &-image
     display: flex
@@ -99,3 +99,6 @@
         margin-right: 14px
         width: 40px
         height: 40px
+    &-image
+      &__pic
+        margin-bottom: 25px
