--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -15,12 +15,14 @@
     width: 50%
     padding-right: 80px
     position: relative
+    padding-bottom: 28px
   &__title
     max-width: 360px
     line-height: 35px
     margin-bottom: 20px
-    margin-top: 23px
+    margin-top: 18px
     letter-spacing: 0.6px 
+    text-align: left
   &__subtitle
     max-width: 250px
     margin-bottom: 30px
@@ -72,10 +74,11 @@
     background: #ffffff
     &-block
       width: 100%
+      padding-bottom: 10px
       padding-right: 0
     &__input
       width: 100%
-      margin-bottom: 9px
+      margin-bottom: 8px
       font-size: 15px
       padding-left: 21px
     &__button
@@ -86,6 +89,7 @@
       max-width: 274px
       line-height: 21px
       letter-spacing: 0
+      margin-top: 8px
     &__subtitle
       margin-bottom: 28px
     &-text
