--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -4,15 +4,17 @@ body
   +reg
   // line-height: 1
 img 
+  display: block
   max-width: 100%
 .container
   width: 1170px
   margin: auto
 .section
-  padding: 60px 0
+  // padding: 60px 0
   // height: 596px
   &-title
     font-size: 23px
+    max-width: 500px
     +bold
     text-align: center
   &-subtitle
