--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -3,6 +3,7 @@
   background-position: center right
   background-size: contain
   position: relative
+  padding: 60px 0
   &:before
     content: ''
     width: 50%
@@ -69,9 +70,22 @@
       margin-bottom: 10px
     &__button
       font-size: 14px  
+@media (max-width: 768px)
+  .offer
+    background: #ffffff
+    &-block
+      width: 100%
+      padding-bottom: 10px
+      padding-right: 0
+    &__input
+      width: 47%
+      margin-bottom: 10px
+    &__button
+      font-size: 14px   
 @media (max-width: 320px)
   .offer
     background: #ffffff
+    padding: 42px 0
     &-block
       width: 100%
       padding-bottom: 10px
