added steps block, mobile responsive, pixel perfect

--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -70,7 +70,7 @@
     flex-wrap: wrap
 @media (max-width: 320px)
   .price
-    padding: 47px 0
+    padding: 47px 0 10px 0
     &__card
       margin-bottom: 27px
     &__title
