--- a/src/css/style.css
+++ b/src/css/style.css
@@ -444,6 +444,14 @@ img {
   margin-top: 18px;
   letter-spacing: 0.6px;
   text-align: left;
+  -webkit-animation-name: fadeIntoRight;
+          animation-name: fadeIntoRight;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: cubic-bezier(0.1, 0.25, 0.1, 1);
+          animation-timing-function: cubic-bezier(0.1, 0.25, 0.1, 1);
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
 }
 
 .offer__subtitle {
@@ -850,7 +858,7 @@ img {
 
 @media (max-width: 320px) {
   .price {
-    padding: 47px 0;
+    padding: 47px 0 10px 0;
   }
   .price__card {
     margin-bottom: 27px;
@@ -890,6 +898,163 @@ img {
     max-width: 270px;
     max-height: 191px;
     margin: auto;
+  }
+}
+
+@-webkit-keyframes fadeIntoRight {
+  0% {
+    top: 100px;
+  }
+  100% {
+    top: 0;
+  }
+}
+
+@keyframes fadeIntoRight {
+  0% {
+    top: 100px;
+  }
+  100% {
+    top: 0;
+  }
+}
+
+.step {
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+  text-align: center;
+  position: relative;
+}
+
+.step:after {
+  content: '';
+  width: 72px;
+  height: 25px;
+  top: -10px;
+  right: -15%;
+  position: absolute;
+  background: url("../img/steps/arrow.png") no-repeat center;
+}
+
+.step:last-child:after {
+  display: none;
+}
+
+.step__image {
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  border: 3px solid #ffd200;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 27px;
+}
+
+.step__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  max-width: 155px;
+  margin: auto;
+}
+
+.steps {
+  padding-top: 30px;
+}
+
+.steps__title {
+  margin: auto;
+  margin-bottom: 38px;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 45px;
+  max-width: 670px;
+}
+
+.steps__subtitle {
+  text-align: center;
+  margin-bottom: 58px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 45px;
+}
+
+.steps-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media (max-width: 768px) {
+  .step {
+    margin-bottom: 30px;
+  }
+  .step:after {
+    display: none;
+  }
+  .step__text {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+  }
+  .steps-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 320px) {
+  .step {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .step:after {
+    display: none;
+  }
+  .step:nth-child(4) .step__text {
+    max-width: 133px;
+    margin: auto;
+  }
+  .step__text {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    max-width: 128px;
+  }
+  .step__image {
+    margin-bottom: 20px;
+  }
+  .steps {
+    padding-top: 12px;
+  }
+  .steps-block {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .steps__title {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    margin-bottom: 10px;
+  }
+  .steps__subtitle {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 45px;
+    margin-bottom: 19px;
   }
 }
 /*# sourceMappingURL=style.css.map */
