added brief section, data validation

--- a/src/sass/_animations.sass
+++ b/src/sass/_animations.sass
@@ -1,6 +1,8 @@
-@keyframes fadeIntoRight
-  0%
+@keyframes bouncing
+  0%  
+    top: 0 
+    box-shadow: 0 0 5px rgba(0,0,0,0.5)
+  100% 
     top: 100px
-  100%
-    top: 0
+    box-shadow: 0 50px 50px rgba(0,0,0,0.1)
     
