--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,9 +116,17 @@ img {
 
 .input {
   border: 1px solid #dddddd;
-  padding: 20px 26px;
+  padding: 20px 25px;
   font-size: 15px;
   border-radius: 10px;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.input-group {
+  position: relative;
+  padding: 0;
+  margin: 0;
 }
 
 .input:focus {
@@ -155,6 +163,25 @@ img {
 
 .arrows__left:hover, .arrows__right:hover {
   cursor: pointer;
+}
+
+em.invalid {
+  text-align: center;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: white;
+  background-color: red;
+  font-weight: 800;
+  width: 95%;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .navbar {
@@ -444,14 +471,6 @@ img {
   margin-top: 18px;
   letter-spacing: 0.6px;
   text-align: left;
-  -webkit-animation-name: fadeIntoRight;
-          animation-name: fadeIntoRight;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-timing-function: cubic-bezier(0.1, 0.25, 0.1, 1);
-          animation-timing-function: cubic-bezier(0.1, 0.25, 0.1, 1);
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
 }
 
 .offer__subtitle {
@@ -901,21 +920,29 @@ img {
   }
 }
 
-@-webkit-keyframes fadeIntoRight {
+@-webkit-keyframes bouncing {
   0% {
-    top: 100px;
+    top: 0;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   }
   100% {
-    top: 0;
+    top: 100px;
+    -webkit-box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
   }
 }
 
-@keyframes fadeIntoRight {
+@keyframes bouncing {
   0% {
-    top: 100px;
+    top: 0;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   }
   100% {
-    top: 0;
+    top: 100px;
+    -webkit-box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -958,6 +985,11 @@ img {
   margin-bottom: 27px;
 }
 
+.step__image--animate {
+  -webkit-animation: bouncing 1s cubic-bezier(0.1, 0.25, 0.1, 1) 0.5s infinite alternate both;
+          animation: bouncing 1s cubic-bezier(0.1, 0.25, 0.1, 1) 0.5s infinite alternate both;
+}
+
 .step__text {
   font-size: 14px;
   font-weight: 400;
@@ -967,7 +999,7 @@ img {
 }
 
 .steps {
-  padding-top: 30px;
+  padding: 30px 0;
 }
 
 .steps__title {
@@ -1055,6 +1087,228 @@ img {
     font-weight: 400;
     line-height: 45px;
     margin-bottom: 19px;
+  }
+}
+
+.brief {
+  background-image: url("../img/brief/brief-bg-color.jpg"), url("../img/brief/brief-form-bg.jpg");
+  background-postion: left center, right center;
+  background-size: 50%, contain;
+  background-repeat: repeat-Y, no-repeat;
+  padding: 76px 0;
+}
+
+.brief-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.brief__interview {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.brief__form {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-left: 213px;
+  text-align: center;
+}
+
+.brief__input {
+  width: 100%;
+  max-width: 370px;
+  margin-bottom: 15px;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.brief__button {
+  margin-top: 12px;
+  margin-bottom: 28px;
+  height: 70px;
+  width: 100%;
+  max-width: 370px;
+}
+
+.interview {
+  padding-right: 69px;
+}
+
+.interview__title {
+  margin-bottom: 30px;
+  font-size: 22px;
+  line-height: 33px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0px;
+}
+
+.interview__subtitle {
+  display: block;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 45px;
+  margin-bottom: 81px;
+}
+
+.interview-list {
+  list-style: none;
+  padding: 0;
+}
+
+.interview-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 26px;
+  padding: 0;
+}
+
+.interview-list__text {
+  max-width: 400px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.interview-list__counter {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #333333;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 32px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.form__title {
+  margin-bottom: 30px;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 33px;
+}
+
+.form__subtitle {
+  display: block;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 45px;
+  margin-bottom: 36px;
+}
+
+.form__description {
+  display: block;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+@media (max-width: 1200px) {
+  .brief__form {
+    padding-right: 30px;
+  }
+  .interview {
+    padding-right: 30px;
+  }
+  .interview__title {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+  .interview__subtitle {
+    margin-bottom: 39px;
+    font-size: 14px;
+  }
+  .interview-list__text {
+    font-size: 14px;
+    max-width: 231px;
+  }
+  .interview-list__counter {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 320px) {
+  .brief {
+    background-image: url("../img/brief/brief-bg-color.jpg"), url("../img/brief/brief-form-bg.jpg");
+    background-postion: top center, bottom center;
+    background-size: 100% 50%, cover;
+    background-repeat: repeat-x, no-repeat;
+    padding-top: 25px;
+    padding-bottom: 32px;
+  }
+  .brief-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .brief__form {
+    padding-left: 0;
+    margin-top: 90px;
+    padding-right: 0;
+  }
+  .brief__interview {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .brief__input {
+    margin-bottom: 7px;
+  }
+  .brief__button {
+    margin-top: 2px;
+    margin-bottom: 26px;
+  }
+  .interview {
+    padding-right: 0;
+  }
+  .interview__title {
+    max-width: 220px;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 16px;
+    line-height: 21px;
+  }
+  .interview__subtitle {
+    max-width: 175px;
+    margin-bottom: 39px;
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .interview-list__text {
+    font-size: 14px;
+    max-width: 240px;
+    line-height: 14px;
+  }
+  .interview-list__counter {
+    margin-right: 8px;
+  }
+  .interview-list__item:last-child {
+    margin-bottom: 0;
+  }
+  .form__title {
+    font-size: 18px;
+    margin-bottom: 8px;
+    line-height: 25.35px;
+  }
+  .form__subtitle {
+    margin-bottom: 18px;
+    font-size: 14px;
+  }
+  .form__description {
+    max-width: 140px;
+    margin: auto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
   }
 }
 /*# sourceMappingURL=style.css.map */
