--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -63,9 +63,14 @@ img
 
 .input
   border: 1px solid $border-input
-  padding: 20px 26px
+  padding: 20px 25px
   font-size: 15px
   border-radius: 10px
+  flex-basis: 50%
+  &-group
+    position: relative
+    padding: 0
+    margin: 0
   &:focus
     outline: none !important
     border-radius: 10px
@@ -94,3 +99,18 @@ img
   &__left, &__right
     &:hover
       cursor: pointer
+
+em.invalid
+  text-align: center
+  position: absolute
+  top: 0px
+  left: 0px
+  color: white
+  background-color: red
+  font-weight: 800
+  width: 95%
+  // border: 1px solid blue
+.form
+  display: flex
+  flex-wrap: wrap
+
