--- a/src/sass/blocks/_steps.sass
+++ b/src/sass/blocks/_steps.sass
@@ -23,6 +23,8 @@
     justify-content: center
     align-items: center
     margin-bottom: 27px
+    &--animate
+      animation: bouncing 1s cubic-bezier(.1,.25,.1,1) 0.5s infinite alternate both
   &__text
     font-size: 14px
     font-weight: 400
@@ -30,7 +32,7 @@
     max-width: 155px
     margin: auto
   &s
-    padding-top: 30px
+    padding: 30px 0
     &__title
       margin: auto
       margin-bottom: 38px
