added footer section, yandex map

--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -31,8 +31,9 @@
     margin-bottom: 29px
     width: 238px
     min-height: 65px
-    &:first-child
-      margin-right: 12px
+    margin-right: 12px
+    &::last-child
+      margin-right: 0
   &__button
     width: 98%
     min-height: 70px
