--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,6 +182,9 @@ em.invalid {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .navbar {
@@ -482,10 +485,11 @@ em.invalid {
   margin-bottom: 29px;
   width: 238px;
   min-height: 65px;
+  margin-right: 12px;
 }
 
-.offer__input:first-child {
-  margin-right: 12px;
+.offer__input::last-child {
+  margin-right: 0;
 }
 
 .offer__button {
@@ -999,7 +1003,8 @@ em.invalid {
 }
 
 .steps {
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 98px;
 }
 
 .steps__title {
@@ -1092,10 +1097,11 @@ em.invalid {
 
 .brief {
   background-image: url("../img/brief/brief-bg-color.jpg"), url("../img/brief/brief-form-bg.jpg");
-  background-postion: left center, right center;
+  background-position: left center, right center;
   background-size: 50%, contain;
   background-repeat: repeat-Y, no-repeat;
-  padding: 76px 0;
+  padding-top: 74px;
+  padding-bottom: 10px;
 }
 
 .brief-block {
@@ -1112,13 +1118,12 @@ em.invalid {
 .brief__form {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
-  padding-left: 213px;
+  padding-left: 212px;
   text-align: center;
 }
 
 .brief__input {
-  width: 100%;
-  max-width: 370px;
+  width: 370px;
   margin-bottom: 15px;
   font-size: 15px;
   font-weight: 400;
@@ -1203,6 +1208,7 @@ em.invalid {
   font-weight: 400;
   line-height: 45px;
   margin-bottom: 36px;
+  text-align: center;
 }
 
 .form__description {
@@ -1239,11 +1245,11 @@ em.invalid {
 @media (max-width: 320px) {
   .brief {
     background-image: url("../img/brief/brief-bg-color.jpg"), url("../img/brief/brief-form-bg.jpg");
-    background-postion: top center, bottom center;
-    background-size: 100% 50%, cover;
+    background-position: top center, bottom center;
+    background-size: 100% 47%, cover;
     background-repeat: repeat-x, no-repeat;
-    padding-top: 25px;
-    padding-bottom: 32px;
+    padding-top: 30px;
+    padding-bottom: 31px;
   }
   .brief-block {
     -webkit-box-orient: vertical;
@@ -1262,6 +1268,7 @@ em.invalid {
   }
   .brief__input {
     margin-bottom: 7px;
+    width: 278px;
   }
   .brief__button {
     margin-top: 2px;
@@ -1279,7 +1286,7 @@ em.invalid {
   }
   .interview__subtitle {
     max-width: 175px;
-    margin-bottom: 39px;
+    margin-bottom: 35px;
     font-size: 14px;
     line-height: 16px;
   }
@@ -1309,6 +1316,124 @@ em.invalid {
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
+  }
+}
+
+strong {
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0px;
+}
+
+a {
+  text-decoration: none;
+  color: #333333;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  letter-spacing: 0px;
+}
+
+.footer {
+  position: relative;
+}
+
+.map {
+  position: absolute;
+  width: 50%;
+  top: 0;
+  left: 0;
+}
+
+.contacts {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-top: 69px;
+  padding-left: 211px;
+}
+
+.contacts-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.contacts__title {
+  font-size: 23px;
+  font-weight: 700;
+  line-height: 33px;
+  margin-bottom: 89px;
+  max-width: 300px;
+}
+
+.contacts-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.contacts-list__icon {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  margin-right: 20px;
+  padding-top: 5px;
+}
+
+.contacts-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 28px;
+}
+
+.contacts-list__text {
+  font-size: 16px;
+  line-height: 26px;
+  display: inline-block;
+  color: #333333;
+  max-width: 195px;
+}
+
+@media (max-width: 320px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-top: 12px;
+  }
+  .map {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 457px;
+  }
+  .contacts {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    padding-top: 34px;
+    padding-left: 0;
+    padding-bottom: 0;
+  }
+  .contacts__title {
+    margin-bottom: 33px;
+    font-size: 18px;
+    line-height: 1.2;
+    font-family: 'Museo Sans Bold', sans-serif;
+    font-weight: 700;
+    letter-spacing: 0px;
+  }
+  .contacts-list__icon {
+    margin-right: 12px;
+    padding-top: 7px;
   }
 }
 /*# sourceMappingURL=style.css.map */
