--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -67,6 +67,7 @@ img
   font-size: 15px
   border-radius: 10px
   flex-basis: 50%
+  // postion: relative
   &-group
     position: relative
     padding: 0
@@ -100,6 +101,15 @@ img
     &:hover
       cursor: pointer
 
+// .invalid
+//   // text-align: center
+//   position: absolute
+//   top: 0px
+//   left: 0px
+//   // color: white
+//   // background-color: red
+//   font-weight: 800
+//   width: 95%
 em.invalid
   text-align: center
   position: absolute
@@ -113,4 +123,5 @@ em.invalid
 .form
   display: flex
   flex-wrap: wrap
+  justify-content: center
 
