--- a/src/sass/blocks/_brief.sass
+++ b/src/sass/blocks/_brief.sass
@@ -1,20 +1,22 @@
 .brief
   background-image: url('../img/brief/brief-bg-color.jpg'), url('../img/brief/brief-form-bg.jpg')
-  background-postion: left center, right center
+  background-position: left center, right center
   background-size: 50%, contain
   background-repeat: repeat-Y, no-repeat
-  padding: 76px 0
+  padding-top: 74px
+  padding-bottom: 10px
   &-block
     display: flex
+    // align-items: center
   &__interview
     flex-basis: 50%
   &__form
     flex-basis: 50%
-    padding-left: 213px
+    padding-left: 212px
     text-align: center
+    // width: 370px
   &__input
-    width: 100%
-    max-width: 370px
+    width: 370px
     margin-bottom: 15px
     font-size: 15px
     font-weight: 400
@@ -75,6 +77,7 @@
     font-weight: 400
     line-height: 45px
     margin-bottom: 36px
+    text-align: center
   &__description
     display: block
     font-size: 15px
@@ -101,11 +104,11 @@
 @media (max-width: 320px)
   .brief
     background-image: url('../img/brief/brief-bg-color.jpg'), url('../img/brief/brief-form-bg.jpg')
-    background-postion: top center, bottom center
-    background-size: 100% 50%, cover
+    background-position: top center, bottom center
+    background-size: 100% 47%, cover
     background-repeat: repeat-x, no-repeat
-    padding-top: 25px
-    padding-bottom: 32px
+    padding-top: 30px
+    padding-bottom: 31px
     &-block
       flex-direction: column
     &__form
@@ -116,6 +119,7 @@
       flex-basis: 100%
     &__input
       margin-bottom: 7px
+      width: 278px
     &__button
       margin-top: 2px
       margin-bottom: 26px
@@ -130,7 +134,7 @@
       line-height: 21px
     &__subtitle
       max-width: 175px
-      margin-bottom: 39px
+      margin-bottom: 35px
       font-size: 14px
       line-height: 16px
     &-list
