--- a/src/sass/blocks/_steps.sass
+++ b/src/sass/blocks/_steps.sass
@@ -32,7 +32,8 @@
     max-width: 155px
     margin: auto
   &s
-    padding: 30px 0
+    padding-top: 30px
+    padding-bottom: 98px
     &__title
       margin: auto
       margin-bottom: 38px
