--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -67,6 +67,8 @@
 @media (max-width: 960px)
   .hero
     padding: 38px 0
+    &-image
+      justify-content: center
     &-block
       flex-direction: column
       align-items: center
