--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -11,11 +11,11 @@
   &-dialog
     position: relative
     margin: auto
-    max-width: 571px
+    max-width: 565px
     width: 65%
-    min-height: 691px
+    height: 676px
     background-color: #ffffff
-    padding: 100px 78px
+    padding: 43px 101px 43px 95px
     display: flex
     flex-direction: column
     align-items: center
@@ -29,36 +29,47 @@
       text-align: center
       font-size: 22px
       line-height: 33px
-      margin-bottom: 52px
+      margin-bottom: 37px
+      padding-top: 0
+      border-top: 0
       +bold
     &__subtitle
       // display: block
       font-size: 16px
       font-weight: 400
       line-height: 35px
-      margin-bottom: 53px
+      margin-bottom: 42px
     &__subtitle2
       // display: block
       // max-width: 271px
       font-size: 15px
       font-weight: 400
       line-height: 20px
-      margin-bottom: 13px
+      margin-bottom: 2px
       text-align: center
+    &__phone
+      display: block
+      color: $text-color
+      font-size: 24px
+      text-decoration: none
+      margin-top: 6px
+      +bold
 .form
   &__input
     width: 100%
+    padding: 23px 24px
     margin-bottom: 15px
   &__button
     width: 100%
+    padding: 26px 28px
     margin-top: 15px
-    margin-bottom: 33px
-@media (max-width: 768px)
+    margin-bottom: 29px
+@media (max-width: 768px) and (max-height: 768px)
   .modal
     &-dialog
-      min-height: 350px
-      width: 80%
-      padding: 50px 50px
+      height: 450px
+      width: 370px
+      padding: 18px 40px
       &__title
         font-size: 18px
         line-height: 1
@@ -68,36 +79,76 @@
         line-height: 1
         margin-bottom: 20px
   .form
+    margin: 12px 0
+    &__input
+      // font-size: 14px
+      padding: 15px 24px
+      margin-bottom: 5px
     &__button
-      width: 100%
-      margin-top: 10px
-      margin-bottom: 15px
-@media (max-width: 320px)
+      // font-size: 14px
+      padding: 16px 28px
+      margin-bottom: 5px
+      margin-top: 5px
+@media (max-width: 567px) and (max-height: 567px)
   .modal
     &-dialog
-      min-height: 250px
+      height: 390px 
+      padding: 10px 20px
+      width: 280px
+      &__title
+        font-size: 18px
+        line-height: 27px
+        margin-bottom: 10px
+      &__subtitle
+        font-size: 13px
+        margin-bottom: 15px
+      &__subtitle2
+        font-size: 13px
+      &__phone
+        font-size: 14px
+  .form
+    margin: 12px 0
+    &__input
+      font-size: 14px
+      padding: 14px 24px
+      margin-bottom: 5px
+    &__button
+      font-size: 14px
+      padding: 15px 28px
+      margin-bottom: 5px
+      margin-top: 5px
+@media (max-width: 320px) and (max-height: 320px)
+  .modal
+    &-dialog
+      height: 310px
       width: 80%
-      padding: 30px 30px
+      padding: 5px 10px
       &__title
         font-size: 14px
         line-height: 1
-        margin-bottom: 22px
+        margin-bottom: 10px
       &__subtitle
         font-size: 11px
         line-height: 1
-        margin-bottom: 33px
+        margin-bottom: 15px
       &__subtitle2
         font-size: 10px
         line-height: 1
+      &__phone
+        font-size: 11px
   .form
+    &__modalPadding
+      margin: 12px 0
     &__input
+      font-size: 14px
       width: 100%
-      margin-bottom: 15px
-      padding: 15px 22px
+      margin-bottom: 5px
+      padding: 14px 22px
       font-size: 14px
     &__button
+      font-size: 14px
       width: 100%
-      margin-top: 15px
-      margin-bottom: 33px
+      margin-top: 10px
+      margin-bottom: 10px
       padding: 15px 22px
       font-size: 14px
