--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,7 +5,7 @@
 @import 'animate/base'
 @import 'animate/bouncing_entrances/bounceInRight'
 @import 'animate/fading_entrances/fadeInUp'
-@import 'owl-carousel/owl.carousel'
+@import 'slick/slick'
 
 @import 'blocks/navbar'
 @import 'blocks/hero'
