--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -21,10 +21,12 @@
   font-family: 'Museo Sans Light', sans-serif;
   font-weight: 300;
   letter-spacing: 0px;
+  color: $text-color
 }
 
 @mixin bold {
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
   letter-spacing: 0px;
+  color: $text-color
 }
