--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -19,10 +19,6 @@
   text-align: center
   border: 1px solid $border-card
   transition: 0.2s
-  &:hover
-    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1)
-    .card__image:before
-      opacity: 1
   &__text
     padding: 25px 0 46px 0
   &__title
@@ -50,9 +46,7 @@
     color: $text-color
     font-size: 16px
     position: relative
-    &:hover
-      &:after
-        height: 12px
+
     &:after
       content: ''
       position: absolute
@@ -68,6 +62,18 @@
     display: flex
     justify-content: space-between
     flex-wrap: wrap
+
+@media (min-width: 992px)
+ .card
+  &:hover
+    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1)
+    .card__image:before
+      opacity: 1
+  &__link
+    &:hover
+      &:after
+        height: 12px
+
 @media (max-width: 1200px)
   .price
     &__card
@@ -175,7 +181,7 @@
     &__title
       font-size: 14px
       font-weight: 400
-      line-height: 44px
+      line-height: 43px
     &__link
       padding-top: 0
       font-size: 16px
